# DataPulse

./: .gitignore  pyproject.toml
src/.jupyter_runtime/: jpserver-25428-open.html  jpserver-25428.json  jupyter_cookie_secret  kernel-8df8a420-f4f7-4687-a2e2-69dec8208743.json
src/csv_stats/: Untitled.ipynb  csv_reader.py  main.py  models.py  parser.py  stats.py
src/data/: sample.csv
