[project]
name = "csv-stats"
version = "0.1.0"
description = "CLI tool for CSV column statistics"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
csv-stats = "csv_stats.main:main"   # после uv sync запускается как `csv-stats`

[tool.mypy]
strict = true
python_version = "3.12"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]     # errors, pyflakes, isort, upgrades
