[project]
name = "csv-stats"
version = "0.1.0"
description = "CLI tool for CSV column statistics"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
csv-stats = "csv_stats.main:main"   # после uv sync запускается как `csv-stats`

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"
packages = ["csv_stats"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]     # errors, pyflakes, isort, upgrades

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/csv_stats"]

